--- a/source/index.html
+++ b/source/index.html
@@ -31,11 +31,17 @@
       <div class="service__carousel carousel">
         <div class="carousel__view">
           <ul class="carousel__list-cards list-cards">
-            <li class="list-cards__item">1</li>
+            <li class="list-cards__item">
+              <img src="img/arbitr-jpg.jpg" width="130" height="130"
+                   alt="арбитражные споры" class="list-cards__img">
+            </li>
             <li class="list-cards__item">2</li>
             <li class="list-cards__item">3</li>
             <li class="list-cards__item">4</li>
             <li class="list-cards__item">5</li>
+            <li class="list-cards__item">6</li>
+            <li class="list-cards__item">7</li>
+            <li class="list-cards__item">8</li>
           </ul>
         </div>
         <div class="carousel__markers markers">
