refactoring carousel code

--- a/source/index.html
+++ b/source/index.html
@@ -34,8 +34,23 @@
             <li class="list-cards__item">
               <img src="img/arbitr-jpg.jpg" width="130" height="130"
                    alt="арбитражные споры" class="list-cards__img">
+              <p class="list-cards__title">
+                Арбитражные споры
+              </p>
+              <p class="list-cards__text">
+                Налоги, дебиторские задолженности, штрафные санкций, неустойки и т.п.
+              </p>
             </li>
-            <li class="list-cards__item">2</li>
+            <li class="list-cards__item">
+              <img src="img/dogovora.jpg" width="130" height="130"
+                   alt="работа с договорами" class="list-cards__img">
+              <p class="list-cards__title">
+                Работа с договорами
+              </p>
+              <p class="list-cards__text">
+                Составление договоров гражданско-правового характера
+              </p>
+            </li>
             <li class="list-cards__item">3</li>
             <li class="list-cards__item">4</li>
             <li class="list-cards__item">5</li>
@@ -95,6 +110,7 @@
             <li class="carousel-rev__item">1</li>
             <li class="carousel-rev__item">2</li>
             <li class="carousel-rev__item">3</li>
+            <li class="carousel-rev__item">4</li>
           </ul>
         </div>
         <div class="carousel__markers markers">
