refactoring carousel: made it more usefull with support markers

--- a/source/index.html
+++ b/source/index.html
@@ -51,22 +51,67 @@
                 Составление договоров гражданско-правового характера
               </p>
             </li>
-            <li class="list-cards__item">3</li>
-            <li class="list-cards__item">4</li>
-            <li class="list-cards__item">5</li>
-            <li class="list-cards__item">6</li>
-            <li class="list-cards__item">7</li>
-            <li class="list-cards__item">8</li>
+            <li class="list-cards__item">
+              <img src="img/kompany.jpg" width="130" height="130"
+                   alt="Корпоративное право" class="list-cards__img">
+              <p class="list-cards__title">
+                Услуги в области корпоративного права
+              </p>
+            </li>
+            <li class="list-cards__item">
+              <img src="img/enterprise-support.jpg" width="130" height="130"
+                   alt="Корпоративное право" class="list-cards__img">
+              <p class="list-cards__title">
+                Юридическое сопровождение деятельности предприятия
+              </p>
+            </li>
+            <li class="list-cards__item">
+              <img src="img/work.jpg" width="130" height="130"
+                   alt="работа с договорами" class="list-cards__img">
+              <p class="list-cards__title">
+                Трудовые споры
+              </p>
+              <p class="list-cards__text">
+                Индивидуальные трудовые споры для физических лиц. Привлечение к дисциплинарной ответственности, увольнение
+              </p>
+            </li>
+            <li class="list-cards__item">
+              <img src="img/admin.jpg" width="130" height="130"
+                   alt="работа с договорами" class="list-cards__img">
+              <p class="list-cards__title">
+                Административные правонарушения
+              </p>
+              <p class="list-cards__text">
+                Споры в области административного права для физических лиц
+              </p>
+            </li>
+            <li class="list-cards__item">
+              <img src="img/customer.jpg" width="130" height="130"
+                   alt="работа с договорами" class="list-cards__img">
+              <p class="list-cards__title">
+                Защита прав потребителя
+              </p>
+            </li>
+            <li class="list-cards__item">
+              <img src="img/civil.jpg" width="130" height="130"
+                   alt="работа с договорами" class="list-cards__img">
+              <p class="list-cards__title">
+                Споры в области гражданских правоотношений
+              </p>
+            </li>
           </ul>
         </div>
         <div class="carousel__markers markers">
           <ul class="markers__list">
-            <div class="markers__fill"></div>
-            <li class="markers__item"></li>
-            <li class="markers__item"></li>
-            <li class="markers__item"></li>
-            <li class="markers__item"></li>
-            <li class="markers__item"></li>
+            <div class="markers__fill-service"></div>
+            <li class="markers__item-service"></li>
+            <li class="markers__item-service"></li>
+            <li class="markers__item-service"></li>
+            <li class="markers__item-service"></li>
+            <li class="markers__item-service"></li>
+            <li class="markers__item-service"></li>
+            <li class="markers__item-service"></li>
+            <li class="markers__item-service"></li>
           </ul>
         </div>
         <div class="carousel__buttons">
@@ -224,8 +269,6 @@
     </section>
   </footer>
 
-<!--<script src="js/main.js"></script> -->
-<script src="js/carousel.js"></script>
 <script src="js/carousel-rev.js"></script>
 <script src="js/form.js"></script>
 </body>
