--- a/source/index.html
+++ b/source/index.html
@@ -114,10 +114,18 @@
             <li class="markers__item-service"></li>
           </ul>
         </div>
-        <div class="carousel__buttons">
-          <button class="carousel__button-left">Влево</button>
-          <button class="carousel__button-right">Вправо</button>
-        </div>
+        <button class="carousel__button carousel__button-left">
+          <svg width="25" height="25" viewBox="0 0 25 25" fill="none" stroke-width="1.5" stroke="white" stroke-linejoin="round" stroke-linecap="round" xmlns="http://www.w3.org/2000/svg">
+            <polyline points="16,20 7,12 16,5" />
+          </svg>
+        </button>
+        <button class="carousel__button carousel__button-right">
+          <svg width="25" height="25" viewBox="0 0 25 25" fill="none" stroke-width="1.5" stroke="white" stroke-linejoin="round" stroke-linecap="round" xmlns="http://www.w3.org/2000/svg">
+            <polyline points="16,20 7,12 16,5" />
+          </svg>
+        </button>
+<!--        <div class="carousel__buttons">
+        </div>-->
       </div>
     </section>
     <section class="about-self">
@@ -165,13 +173,18 @@
             <li class="markers__item"></li>
             <li class="markers__item"></li>
             <li class="markers__item"></li>
-            <li class="markers__item"></li>
           </ul>
         </div>
-        <div class="carousel-rev__buttons">
-          <button class="carousel-rev__button-left">Влево</button>
-          <button class="carousel-rev__button-right">Вправо</button>
-        </div>
+        <button class="carousel__button carousel-rev__button-left">
+          <svg width="25" height="25" viewBox="0 0 25 25" fill="none" stroke-width="1.5" stroke="white" stroke-linejoin="round" stroke-linecap="round" xmlns="http://www.w3.org/2000/svg">
+            <polyline points="16,20 7,12 16,5" />
+          </svg>
+        </button>
+        <button class="carousel__button carousel-rev__button-right">
+          <svg width="25" height="25" viewBox="0 0 25 25" fill="none" stroke-width="1.5" stroke="white" stroke-linejoin="round" stroke-linecap="round" xmlns="http://www.w3.org/2000/svg">
+            <polyline points="16,20 7,12 16,5" />
+          </svg>
+        </button>
       </div>
     </section>
   </main>
