--- a/source/index.html
+++ b/source/index.html
@@ -147,16 +147,19 @@
         Более 95% положительных судебных решений представляемых лиц.
       </p>
       <p class="about-self__contacts">
-        тел. +7(910)210-19-77
-        legal-view@mail.ru
+        <a href="tel:+7(910)210-19-77" class="about-self__tel">
+          +7(910)210-19-77
+        </a>
+        <a href="email:legal-view@mail.ru" class="about-self__email">
+          legal-view@mail.ru
+        </a>
       </p>
     </section>
     <form action="ask.php" class="form-ask">
       <h2 class="form-ask__title">Задайте свой вопрос бесплатно</h2>
-      <img src="img/form.png" alt="Фемида" class="form-ask__img">
+      <img src="img/form.png" alt="Фемида" class="form-ask__img" width="250" height="250">
       <input type="email" name="email" placeholder="Ваш email" class="form-ask__email">
-      <textarea name="question" rows="6" placeholder="Введите Ваш вопрос..." class="form-ask__question">
-      </textarea>
+      <textarea name="question" rows="6" placeholder="Введите Ваш вопрос..." class="form-ask__question"></textarea>
       <div class="form-ask__wrapper">
         <input type="checkbox" class="form-ask__checkbox" checked>
         <p class="form-ask__notice">
