done styiling mobile version

--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,10 @@
   <main>
     <section class="promo">
       <h1 class="promo__title visually-hidden">Адвокат Владимир Раков. Приветствие</h1>
-      <img width="300" src="img/main_photo.png" alt="Фото адвоката Владимира Ракова" class="promo__main-photo">
+      <picture>
+        <source media="(min-width: 768px)" srcset="img/promo768.jpg">
+        <img width="300" src="img/main_photo.png" alt="Фото адвоката Владимира Ракова" class="promo__main-photo">
+      </picture>
       <p class="promo__slogan">
         «Знание законов заключается не в том,
          чтобы помнить их слова,
@@ -362,10 +365,10 @@
       </div>
       <div class="footer__copyright">
         <p class="footer__copyright-city">
-          г. Железногорск Раков Владимир
+          г. Железногорск, Раков Владимир
         </p>
         <p class="footer__copyright-text">
-          2023 Все права защищены
+          2023 г. Все права защищены
         </p>
       </div>
 
