--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
       <h1 class="promo__title visually-hidden">Адвокат Владимир Раков. Приветствие</h1>
       <picture>
         <source media="(min-width: 768px)" srcset="img/promo768.jpg">
-        <img width="300" src="img/main_photo.png" alt="Фото адвоката Владимира Ракова" class="promo__main-photo">
+        <img width="300" src="img/promo2.jpg" alt="Фото адвоката Владимира Ракова" class="promo__main-photo">
       </picture>
       <p class="promo__slogan">
         «Знание законов заключается не в том,
@@ -144,9 +144,9 @@
     <section class="about-self">
       <h2 class="about-self__title">О себе</h2>
       <p class="about-self__text">
-        Высшее юридическое образование Московский государственный социальный университет
+        Высшее юридическое образование: Московский государственный социа&shyльный университет.
         Переподготовка в области налогового консультирования РосНОУ. Налоговый консультант.
-        Профессиональный опыт работы в крупных организациях более 15 лет.
+        Профессио&shyнальный опыт работы в крупных организациях более 15 лет.
         Более 95% положительных судебных решений представляемых лиц.
       </p>
       <p class="about-self__contacts">
